cmake_minimum_required(VERSION 3.29)
project(BasesDeProgramacion)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ejercicio1
        Ej1/Ej1.cpp
        Ej1/Ej1.h)

add_executable(Ejercicio2
        Ej2/Ej2.cpp
        Ej2/Ej2.h)

add_executable(Ejercicio3
        Ej3/Ej3.cpp
        Ej3/Ej3.h)

add_executable(Ejercicio4
        Ej4/Ej4.cpp
        Ej4/Ej4.h)

add_executable(Ejercicio5
        Ej5/Ej5.cpp
        Ej5/Ej5.h)

add_executable(Ejercicio6
        Ej6/Ej6.cpp
        Ej6/Ej6.h
)

add_executable(Ejercicio7
        Ej7/Ej7.cpp
        Ej7/Ej7.h)

add_executable(Ejercicio8
        Ej8/Ej8.cpp
        Ej8/Ej8.h)